Change 'pre-line' to 'pre-wrap' to prevent whitespace collapsing.

--- a/src/tibet/tools/sherpa/css/TP.sherpa.console.css
+++ b/src/tibet/tools/sherpa/css/TP.sherpa.console.css
@@ -203,7 +203,7 @@ span[name="inputEntry"]
 
     color: #ccc;
 
-    white-space: pre-line;
+    white-space: pre-wrap;
 }
 
 .inputcell .stats
@@ -214,7 +214,7 @@ span[name="inputEntry"]
 
     color: grey;
 
-    white-space: pre-line;
+    white-space: pre-wrap;
 }
 
 .inputcell .typeinfo
@@ -225,7 +225,7 @@ span[name="inputEntry"]
 
     color: orange;
 
-    white-space: pre-line;
+    white-space: pre-wrap;
 }
 
 
@@ -239,7 +239,7 @@ span[name="inputEntry"]
     display: inline-block;
     width: 100%;
 
-    white-space: pre-line;
+    white-space: pre-wrap;
 }
 
 .outputcell .stats
@@ -250,7 +250,7 @@ span[name="inputEntry"]
 
     color: grey;
 
-    white-space: pre-line;
+    white-space: pre-wrap;
 }
 
 .outputcell .typeinfo
@@ -261,7 +261,7 @@ span[name="inputEntry"]
 
     color: orange;
 
-    white-space: pre-line;
+    white-space: pre-wrap;
 }
 
 .outputcell .empty {
